# pydrlibs

./: .gitignore  .gitmodules  LICENSE  MANIFEST.in  Makefile  NOTES.txt  README.md  meson.build  pyproject.toml  pytest.ini  setup.cfg  setup.py
dr_libs/: __main__.py  meson.build
examples/: Makefile  dr_wav_simple.c  dr_wav_simple.py  dr_wav_simple_write.py
patches/: dr_wav_data_pos.patch
src/: dr_libs.pxd  dr_libs.pyx  dr_wav.pxd  dr_wav.pyx  meson.build  pydrlibs.pyx
tests/: test_wav.py
