[build-system]
# https://thiblahute.gitlab.io/mesonpep517/
build-backend = "mesonpep517.buildapi"
requires = [
    "cython",
    "wheel",
    "mesonpep517 @ git+https://gitlab.com/SpotlightKid/mesonpep517@allfixes",
    "ninja"
]


[tool.mesonpep517.entry-points]
console_scripts = [
    'dr_wav_test = dr_libs.__main__:main',
]


[tool.mesonpep517.metadata]
author = "Christopher Arndt "
author-email = "chris@chrisarndt.de"
summary = "Python bindings for dr_libs audio decoding libraries"
home-page = "https://github.com/SpotlightKid/pydrlibs"
project-urls = [
    "Source, https://github.com/SpotlightKid/pydrlibs",
]
description-file = "README.md"
# field not supported by mesonpep517 yet
license = "MIT License"
requires-python = ">= 3.6"
classifiers = [
    "Development Status :: 2 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX",
    "Operating System :: MacOS :: MacOS X",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Topic :: Multimedia :: Sound/Audio",
    "Topic :: Software Development :: Libraries :: Python Modules"
]
meson-python-option-name = "python3"


[tool.flake8]
ignore = "E116, E265, E266, E731, W504"
max-line-length = 100


[tool.isort]
ensure_newline_before_comments = true
force_grid_wrap = 0
include_trailing_comma = true
line_length = 99
multi_line_output = 3
use_parentheses = true


[tool.black]
line-length = 99
