[metadata]
author = Christopher Arndt
author_email = chris@chrisarndt.de
classifiers =
    Development Status :: 2 - Alpha
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Operating System :: MacOS :: MacOS X
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Multimedia :: Sound/Audio
    Topic :: Software Development :: Libraries :: Python Modules
description = Python bindings for dr_libs audio decoding libraries
license = MIT License
long_description = file: README.md
name = pydrlibs
url = https://github.com/SpotlightKid/pydrlibs