[metadata]
name = pydrlibs
version = 0.1.0
url = https://github.com/SpotlightKid/pydrlibs
author = Christopher Arndt
author_email = chris@chrisarndt.de
classifiers =
    Development Status :: 2 - Alpha
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Operating System :: MacOS :: MacOS X
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Multimedia :: Sound/Audio
    Topic :: Software Development :: Libraries :: Python Modules
description = Python bindings for dr_libs audio decoding libraries
license = MIT License
long_description = file: README.md
long_description_content_type = text/markdown

[egg_info]
tag_build = .dev

[aliases]
# A handy alias to build a release (source and wheel)
release = build egg_info -Db "" sdist --formats=gztar bdist_wheel

[flake8]
ignore = E116, E265, E266, E731, W504
max-line-length = 100
